plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'// 네이버 api가져오기위함
	implementation 'org.jsoup:jsoup:1.15.3' // 네이버 api에서 불러올때 이름에 있는 html태그 제거
	// oauth
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//파일 업로드  다운로드
	implementation 'commons-fileupload:commons-fileupload:1.4'
	implementation 'commons-io:commons-io:2.11.0'

	// @Pattern 애노테이션을 사용하여 아이디의 길이와 형식을 검증
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// JSON
	implementation 'org.json:json:20210307'
	//타임리프 
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect' //레이아웃을 위한 코드
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	//메일
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	
	//시큐리티 
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	
	//Web ( MVC )
	implementation 'org.springframework.boot:spring-boot-starter-web'
	
	//마이바티스
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

	//롬북
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	
	//개발자 툴
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	//데이터베이스 서버
	runtimeOnly 'com.mysql:mysql-connector-j'

	//테스트
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	testImplementation 'org.springframework.security:spring-security-test' //시큐리티 테스트
	
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}


dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.1" // 프로젝트에 맞는 Spring Cloud 버전 사용
	}
}
tasks.named('test') {
	useJUnitPlatform()
}
